--- a/package.json
+++ b/package.json
@@ -1,16 +1,23 @@
 {
+    "license": "MIT",
     "files": [
         "src/"
     ],
     "scripts": {
-        "start": "parcel serve src/index.html",
-        "build": "cross-env NODE_ENV=production parcel build src/index.html --public-url .",
+        "start": "parcel serve src/html/index.html",
+        "prebuild": "rimraf dist",
+        "build": "cross-env NODE_ENV=production parcel build src/html/index.html --public-url .",
         "deploy": "gh-pages -d dist"
     },
     "devDependencies": {
+        "@babel/preset-env": "^7.15.0",
+        "@babel/preset-typescript": "^7.15.0",
+        "@types/jest": "^26.0.24",
         "cross-env": "^5.2.0",
         "gh-pages": "^1.2.0",
-        "parcel": "^2.0.0",
+        "jest": "^27.0.6",
+        "parcel": "^2.0.0-rc.0",
+        "rimraf": "^3.0.2",
         "typescript": "^2.9.2"
     }
 }
