config pkg-manager

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -7,10 +7,11 @@ orbs:
 workflows:
   sample:
     jobs:
-      - node/install-packages:
-          pkg-manager: yarn
       - node/test:
           version: '15.1'
           # This is the node version to use for the `cimg/node` tag
           # Relevant tags can be found on the CircleCI Developer Hub
           # https://circleci.com/developer/images/image/cimg/node
+      steps:
+          - node/install-packages:
+            pkg-manager: yarn
