--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -6,7 +6,8 @@ orbs:
 
 jobs:
   build:
-    executor: node/default
+    docker:
+      - image: cimg/node:current
     steps:
       - checkout
       - node/install-packages:
