--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
         "start": "parcel serve src/html/index.html",
         "prebuild": "rimraf dist",
         "build": "cross-env NODE_ENV=production parcel build src/html/index.html --public-url .",
-        "deploy": "gh-pages -d dist"
+        "deploy": "gh-pages -d dist",
+        "test": "jest"
     },
     "devDependencies": {
         "@babel/preset-env": "^7.15.0",
