--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,14 +1,60 @@
-# This config is equivalent to both the '.circleci/extended/orb-free.yml' and the base '.circleci/config.yml'
 version: 2.1
 
 orbs:
-  node: circleci/node@4.1
+  node: circleci/node@4.6.0
+
+executors:
+  node:
+    docker:
+      - image: cimg/node:current
+
+
+jobs:
+  install_dependencies:
+    executor: node
+    steps:
+      - checkout
+      - node/install-packages:
+          pkg-manager: yarn
+          cache-path: node_modules
+      - persist_to_workspace:
+          root: .
+          paths:
+            - .
+  test:
+    executor: node
+    steps:
+      - attach_workspace:
+          at: .
+      - run:
+          name: Test
+          command: yarn test
+  deploy:
+    executor: node
+    steps:
+      - attach_workspace:
+          at: .
+      - run:
+          name: Deploy
+          command: yarn deploy
 
 workflows:
-  sample:
+  install_dependencies_and_test:
     jobs:
-      - node/test:
-          version: '15.1'
-          # This is the node version to use for the `cimg/node` tag
-          # Relevant tags can be found on the CircleCI Developer Hub
-          # https://circleci.com/developer/images/image/cimg/node
+      - install_dependencies
+      - test:
+          requires:
+            - install_dependencies
+  install_dependencies_test_and_deploy:
+    jobs:
+      - install_dependencies
+      - test:
+          requires:
+            - install_dependencies
+      - deploy:
+          filters:
+            branches:
+              only: main 
+          requires:
+            - test
+
