--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -40,6 +40,12 @@ jobs:
           fingerprints:
             - "ca:b5:0f:98:65:d1:a2:b3:58:2a:44:8a:b5:7c:bf:d1"
       - run:
+          name: Git config email
+          command: git config --global user.email "circleci@circleci.com"
+      - run:
+          name: Git config name
+          command: git config --global user.name "Circle CI"
+      - run:
           name: Deploy
           command: yarn deploy
 
