--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -40,6 +40,12 @@ jobs:
           fingerprints:
             - "df:df:52:9c:a6:79:d0:fd:79:00:ac:81:68:04:e4:fa"
       - run:
+          name: Git config email
+          command: git config --global user.email "circleci@circleci.com"
+      - run:
+          name: Git config name
+          command: git config --global user.name "Circle CI"
+      - run:
           name: Deploy
           command: yarn deploy
 
